feat: api docs for events
