# internal/model/response_object.go
@@ -1,0 +1,7 @@
+package model
+
+type ResponseObject struct {
+	Code    int         `json:"code"`
+	Message string      `json:"message"`
+	Data    interface{} `json:"data"`
+}
